--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "promise-polyfill": "^6.0.2",
+    "rxjs": "^5.5.6",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
