--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
+    "angular2-moment": "^1.7.1",
     "angularfire2": "^5.0.0-rc.4",
-    "firebase": "4.8.0",
+    "firebase": "^4.8.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "moment": "^2.20.1",
     "promise-polyfill": "^6.0.2",
     "rxjs": "^5.5.6",
     "sw-toolbox": "3.6.0",
