--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-# Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
 *~
@@ -34,9 +32,7 @@ $RECYCLE.BIN/
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
-=======
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -62,6 +58,9 @@ coverage
 
 # Bower dependency directory (https://bower.io/)
 bower_components
+
+# Firestore Environment.Typescript
+src/environment.ts
 
 # node-waf configuration
 .lock-wscript
@@ -94,4 +93,3 @@ typings/
 # dotenv environment variables file
 .env
 
->>>>>>> fa29eba2185c5436e269115a13804312dd73bd67
